--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "blueimp-md5": "^2.7.0",
+        "http-server": "^0.10.0",
         "jdenticon": "^1.6.0",
         "marked": "^0.3.6",
         "vue": "^2.3.3",
